--- a/src/asset/css/app.css
+++ b/src/asset/css/app.css
@@ -1,3 +1,6 @@
 body{
     font-family: 'Ubuntu', sans-serif;
+    background-image: url('../image/BackgroundHome.png');
+    background-position: center top;
+    background-size: 100% 120%;
 }
