--- a/src/views/HomePage/home.css
+++ b/src/views/HomePage/home.css
@@ -3,4 +3,66 @@
     /* text-align: center; */
     display: flex;
     justify-content: center;
+    margin-bottom: -1px;
+}
+
+.ui[class*="top attached"].menu {
+    bottom: 0;
+    margin-bottom: 0;
+    top: 0;
+    margin-top: 2rem;
+    border-radius: .28571429rem .28571429rem 0 0;
+}
+
+.navbar {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 0.5rem;
+}
+
+.ui.tabular.menu .item {
+    background : #DFF3EC;
+    border-radius: 0.28rem 0.28rem 0 0;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    border-top: 2px solid transparent;
+    padding: .92857143em 1.42857143em;
+    color: rgba(0,0,0,.87);
+}
+
+.profile{
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    align-items: center;
+}
+
+.ui.medium.circular.image{
+    width: 20%;
+    height: auto;
+    font-size: 1rem;
+}
+
+.ui.progress {
+    position: relative;
+    display: block;
+    max-width: 100%;
+    border: none;
+    margin: 1em 0 2.5em;
+    box-shadow: none;
+    background: none;
+    padding: 0;
+    width: 30%;
+    height: 30%;
+    border-radius: .28571429rem;
+}
+
+.ui.progress .bar {
+    background: #01B875;
+    border: 3px solid white;
 }
