--- a/src/views/BillDetail/BIllDetail.css
+++ b/src/views/BillDetail/BIllDetail.css
@@ -1,3 +1,61 @@
-.h1{
+.ui.tabular.menu .item {
+    width: 50%;
+}
+
+h2, .h2 {
+    font-size: 3rem;
+    margin: 1rem 3rem;
+    color: white;
+}
+
+
+h3, .h3 {
+    font-size: 2.5rem;
+    margin-top: 1rem;
+    color: #01B875;
+}
+
+.ui.red.button{
+    background-color: #E77C7C;
+    position: absolute;
+    top: 11rem;
+    right: 3rem;
     z-index: 1;
+}
+
+.ui.cards>.card {
+    display: flex;
+    margin: 2em .5em .5em .5em;
+    float: none;
+}
+
+.ui.card>.content, .ui.cards>.card>.content {
+    flex-grow: 1;
+    border: none;
+    border-top: 1px solid rgba(34,36,38,.1);
+    background: 0 0;
+    margin: 0;
+    padding: 2em 2rem;
+    box-shadow: none;
+    font-size: 1em;
+    height: 5rem;
+    border-radius: 0;
+}
+
+.ui.red.label, .ui.red.labels .label {
+    background-color: #db2828!important;
+    border-color: #db2828!important;
+    color: #fff!important;
+}
+
+.ui.ribbon.label {
+    left: calc(-1rem - 1.2em);
+    padding-left: 2rem;
+    padding-right: 2em;
+    position: relative;
+    border-radius: 4px;
+    margin-left: 3rem;
+    margin-right: -1.2em;
+    margin-bottom: -2rem;
+    margin-top: 1rem;
 }
